--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,4 @@
-MONGODB_URI=mongodb+srv://dbguy:g67wQzi1ABZb1WUx@wappdb.n8vqlvo.mongodb.net/fullstackapp?retryWrites=true&w=majority&appName=WappDB
+MONGODB_URI=mongodb+srv://USERNAME:PASSWORD/fullstackapp?retryWrites=true&w=majority&appName=CLUSTERNAME
 JWT_SECRET=super-secret-jwt-key-for-fullstack-task-manager-application-2024-change-this-in-production
 JWT_EXPIRE=7d
 PORT=5000
